[package]
name = "rust_gost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
num_cpus = "1"
md5 = "0.7.0"
rand = "0.8.5"
base64 = "0.21.0"
hex = "0.4"
